--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.9.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
+coverage==7.10.1
 docker==7.1.0
 fastapi==0.116.1
 Flask==3.1.1
@@ -19,6 +20,7 @@ packaging==25.0
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyMySQL==1.1.1
+python-dotenv==1.1.1
 requests==2.32.4
 sniffio==1.3.1
 SQLAlchemy==2.0.41
